<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditText
        android:id="@+id/productNameEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/product_name"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/descriptionEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/description"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/quantityEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/quantity"
        android:inputType="number"
        android:textSize="30sp"
        />
    <EditText
        android:id="@+id/providerContactEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/provider_contact"
        android:textSize="30sp"/>

</LinearLayout>