<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_nav"
    app:startDestination="@id/productListFragment">

    <fragment
        android:id="@+id/productListFragment"
        android:name="br.edu.scl.ifsp.sdm.easyinventory.ui.ProductListFragment"
        android:label="@string/product_list"
        tools:layout="@layout/fragment_product_list" >
        <action
            android:id="@+id/action_productListFragment_to_registerFragment"
            app:destination="@id/registerFragment" />
        <action
            android:id="@+id/action_productListFragment_to_productDetailsFragment"
            app:destination="@id/productDetailsFragment" />
    </fragment>
    <fragment
        android:id="@+id/registerFragment"
        android:name="br.edu.scl.ifsp.sdm.easyinventory.ui.RegisterFragment"
        android:label="@string/register_product"
        tools:layout="@layout/fragment_register" />
    <fragment
        android:id="@+id/productDetailsFragment"
        android:name="br.edu.scl.ifsp.sdm.easyinventory.ui.ProductDetailsFragment"
        android:label="@string/product_details"
        tools:layout="@layout/fragment_product_details" />
</navigation>